# AreQtWidgetsDeadYet

./: CMakeLists.txt  README.md  widget.cpp  widget.h
frontend/: CMakeLists.txt  main.cpp  widget.cpp  widget.h
frontend/widgets/: widgets.qrc
generator/: CMakeLists.txt  analogclock.h  main.cpp  stepinterface.h  widgets.h  wigglywidget.cpp  wigglywidget.h
server/: Cargo.toml
server/assets/: AreQtWidgetsDeadYet.js  index.html
server/src/: main.rs
