[package]
name = "are-qtwidgets-dead-yet"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
lazy_static = "1.4.0"
common_macros = "0.1.1"
clap = { version = "4.0.15", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
